[package]
name = "rs-ps-shadow"
version = "0.0.1"
edition = "2021"

[dependencies]
libp2p = { version = "0.55.0", features = ["tokio", "gossipsub", "identify", "macros", "yamux","noise","tcp"] }        # or another recent version
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"]}
tokio = { version ="1.44.1", features = ["full"] }
clap = { version = "4.5.32", features = ["derive"] }
futures = "0.3.31"
rand = "0.8.5"
chrono = "0.4.40"
hex = "0.4.3"
hostname = "0.4.0"
log = "0.4.27"
either = "1.15.0"

