[package]
name = "rs-ps-shadow"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
libp2p = { git = "https://github.com/hopinheimer/rust-libp2p" , features = ["tokio", "gossipsub", "identify", "macros", "yamux","noise","tcp"], branch = "feat/log-enhancement" }        # or another recent version
tracing = "0.1.41"
openssl = { version = "0.10", features = ["vendored"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter","fmt","json"]}
tokio = { version ="1.44.1", features = ["full"] }
clap = { version = "4.5.32", features = ["derive"] }
futures = "0.3.31"
rand = "0.8.5"
chrono = "0.4.40"
hex = "0.4.3"
hostname = "0.4.0"
log = "0.4.27"
either = "1.15.0"
sha2 = "0.10"

